lib/stratiform/res/test/stratiform/corpus/pos/multiple-sigil-characters.tel
tel 1.0 https://example.com/s !
! comment
hello ! remark
