lib/stratiform/res/test/stratiform/corpus/neg/e123-pragma-extra-atoms.tel
tel 1.0 https://example.com/schema # extra stuff
hello
